@@ -3,6 +3,7 @@ git-annex (3.20111026) UNRELEASED; urgency=low
   * Sped up some operations on remotes that are on the same host.
   * copy --to: Fixed leak when copying many files to a remote on the same
     host.
+  * uninit: Add guard against being run with the git-annex branch checked out.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 27 Oct 2011 13:58:53 -0400
 
